--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -15,10 +15,10 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
         run: npm install
-        working-directory: core
+        working-directory: my-app
       - name: Build
         run: npm run build
-        working-directory: core
+        working-directory: my-app
       # - run: npm run doc
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
